--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 Pangolin
 rgbd_dataset_freiburg1_xyz
 rgbd_dataset_freiburg3_long_office_household
@@ -5,9 +6,13 @@ ipwebcam-gst
 v4l2loopback
 ROS
 
+
+
 *.tgz
 
 
 *.mp4
 *.MPEG
 *.avi
+
+*.bag
